# lambda

./: .gitignore  CMakeLists.txt
lambda/: CMakeLists.txt
lambda/core/: CMakeLists.txt  ast.cpp  ast.hpp  parse.cpp  parse.hpp  parse_context.hpp  parse_error.hpp  token.cpp  token.hpp
lambda/shell/: CMakeLists.txt  common.hpp  declare.hpp  forceable_command.hpp  main.cpp  shell.hpp  shell_env.hpp
lambda/shell/commands/: declare_command.hpp  export_command.hpp  help_command.hpp  import_command.hpp  inspect_command.hpp  reduce_command.hpp
tests/: CMakeLists.txt  ostream_dump.cpp  ostream_dump.hpp  to_string.cpp  to_string.hpp
tests/core/: expression_library.hpp  test_ast.cpp  test_expr.hpp  test_parse.cpp  test_parse_context.cpp  test_token.cpp
